# isoster

./: .gitignore  CITATION.cff  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  EFFICIENCY_BASELINE.md  README.md  TODO.md  debug_high_eps.py  mkdocs.yml  pyproject.toml  test_model_residuals.py
.claude/: settings.json  settings.local.json
.github/agents/: python_review.agent.md
benchmarks/: FRAMEWORK.md  README.md  bench_isofit_overhead.py  convergence_diagnostic.py  huang2013_convergence_benchmark.py  ngc1209_convergence_benchmark.py  sersic_model.py
benchmarks/baselines/: collect_phase4_profile_baseline.py  efficiency_baseline.json  efficiency_thresholds.json  efficiency_thresholds_2026-02-14.json  efficiency_thresholds_quick.json  lock_efficiency_thresholds.py  lock_phase4_thresholds.py  mockgal_adapter.py  phase4_profile_thresholds.json  phase4_profile_thresholds_2026-02-11.json  run_benchmark_gate.py  run_benchmark_gate_defaults.json
benchmarks/benchmark_baseline/: baseline_shared.py  run_baseline.py
benchmarks/exhausted/: README.md  __init__.py  config_registry.md  config_registry.py  run_benchmark.py
benchmarks/first_isophote_retry/: bench_overhead.py
benchmarks/ic3370_exhausted/: run_benchmark.py
benchmarks/lazy_gradient/: run_benchmark.py
benchmarks/multiband/: bench_higher_harmonics_asteris.py  bench_loose_validity_asteris.py  bench_lsb_auto_lock_asteris.py  bench_median_intercept_asteris.py  bench_outer_reg_damping_asteris.py  color_profiles.py  compare_modes.py  diagnose_alpha_saturation.py  legacysurvey_loader.py  qa_masks.py  run_compute_cog_asteris.py  run_compute_cog_pgc.py  run_higher_harmonics_asteris.py  run_higher_harmonics_pgc.py  run_isoster_multiband_pgc.py  run_loose_validity_demo.py  run_lsb_auto_lock_asteris.py  run_lsb_auto_lock_pgc.py  run_outer_reg_damping_asteris.py  run_outer_reg_damping_pgc.py  sweep_outer_reg_strength_pgc.py
benchmarks/noise_floor/: check_results.py  debug_drift.py  debug_parse.py  hsc_noisy_config.yaml  hsc_z02_config.yaml  investigate_drift.py  models_drift_study.yaml  models_z02.yaml  (+1 more)
data/: README.md
docs/: 00-index.md  01-user-guide.md  02-configuration-reference.md  03-algorithm.md  04-architecture.md  06-qa-functions.md  07-lsb-features.md  08-outer-regularization.md  09-exhausted-benchmark.md  10-multiband.md  11-qa-evaluation-refresh-2026-05-10.md  README.md  SPEC.md  STOP_CODES.md  advanced-optimization.md  algorithm.md  configuration-reference.md  future.md  index.md  lessons-autoprof.md  lessons.md  qa-figures.md  qa.md  spec.md  stop-codes.md  test-benchmark-improvement-plan.md  testing.md  todo-archive-phase7-22.md  todo.md  user-guide.md
examples/: README.md  REVIEW.md  basic_usage.py  curve_of_growth.py  ngc3610_mask_effect.py  run_cross_galaxy_outer_reg_sweep.py  test_huang2013_mocks.py
isoster/: __init__.py  _shared.py  cli.py  cog.py  config.py  driver.py  fitting.py  model.py  numba_kernels.py  optimize.py  output_paths.py  plotting.py  sampling.py  utils.py
isoster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mockgal/: SKILL.md
outputs/: INVENTORY.md
progress/: EFFICIENCY_OPTIMIZATION_PLAN.md  NUMBA_CODE_REVIEW.md  NUMBA_OPTIMIZATION_PLAN.md  NUMBA_OPTIMIZATION_RESULTS.md
qa/: generate_comparison_figures.py
qa_photutils_comparison/: README.md
reference/: README.md
site/: 404.html  index.html
tests/: README.md  __init__.py  conftest.py  test_edge_cases.py  test_fitting.py  test_integration_qa.py  test_model.py  test_numba_validation.py  test_sampling.py
(+407 files in other folders)
