[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isoster"
version = "0.1.0"
description = "ISOphote on STERoid - Accelerated isophote fitting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "pyyaml"
]

[project.scripts]
isoster = "isoster.cli:main"

[tool.setuptools.packages.find]
include = ["isoster*"]
exclude = ["reference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_data: tests that use real astronomical data (skipped in CI)",
    "slow: tests that take longer than usual",
    "benchmark: performance benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
