[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isoster"
version = "0.1.0"
description = "ISOphote on STERoid - Accelerated isophote fitting"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "pyyaml",
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "photutils>=1.10; python_version >= '3.9'",
    "numba>=0.60; python_version >= '3.9'",
    "ruff>=0.6; python_version >= '3.9'",
    "pre-commit>=3.8; python_version >= '3.9'",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.scripts]
isoster = "isoster.cli:main"

[tool.setuptools.packages.find]
include = ["isoster*"]
exclude = ["reference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_data: tests that use real astronomical data (skipped in CI)",
    "slow: tests that take longer than usual",
    "benchmark: performance benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
