[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isoster"
version = "0.1.0"
description = "ISOphote on STERoid - Accelerated isophote fitting"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "pyyaml",
    "pydantic>=2.0"
]

[project.optional-dependencies]
asdf = [
    "asdf>=3.0",
]
dev = [
    "pytest>=8.0",
    "photutils>=1.10; python_version >= '3.9'",
    "numba>=0.60; python_version >= '3.9'",
    "ruff>=0.6; python_version >= '3.9'",
    "pre-commit>=3.8; python_version >= '3.9'",
    "asdf>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.scripts]
isoster = "isoster.cli:main"

[tool.setuptools.packages.find]
include = ["isoster*"]
exclude = ["reference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_data: tests that use real astronomical data (skipped in CI)",
    "slow: tests that take longer than usual",
    "benchmark: performance benchmark tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E701"]

[tool.ruff.lint.per-file-ignores]
"isoster/__init__.py" = ["F401"]
"examples/**" = ["E", "F", "W"]
"tests/**" = ["F841", "E402", "E712"]

[dependency-groups]
dev = [
    "h5py>=3.14.0",
]
